@@ -1,6 +1,6 @@
 Package: car
 Version: 3.1-3
-Date: 2023-09-16
+Date: 2023-09-18
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
