@@ -4,6 +4,8 @@ Changes to Version 3.1-3
   
   o make dataEllipse() generic and add default and formula methods (with help of Michael Friendly).
   
+  o linearHypothesis() no longer issues a warning when a hypothesis matrix is supplied for coefficients whose names include arithmetic operators (following report by Robert Baer about unnecessary warnings printed by Anova(), which calls linearHypothesis()).
+  
   o Small changes to docs.
 
 Changes to Version 3.1-2
